# auto-man

./: .gitignore  .pre-commit-config.yaml  CROSS_PLATFORM_PLAN.md  PACKAGING_PLAN.md  README.md  TRANSITION_STATUS.md  build.py  gui.py  llm_engine.py  main.py  mcp_server.py  pyproject.toml  rag.py  requirements.txt  setup_npu.py
src/: cli.py  config.py  gui.py  llm_engine.py  main.py  rag.py  system_checks.py
src/auto_man/: __init__.py  build.py  cli.py  config.py  gui.py  llm_engine.py  main.py  manual_generation.py  mcp_server.py  prompting.py  rag.py
tests/: conftest.py  test_cli.py  test_config.py  test_llm_engine.py  test_main_cli.py  test_manual_generation.py  test_mcp_server.py  test_prompting.py  test_rag.py
