[project]
name = "auto-man"
version = "0.1.0"
description = "NPU-Accelerated Manual Generator"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Auto-Man Team"}
]
maintainers = [
    {name = "Auto-Man Team"}
]
keywords = ["npu", "llm", "manual-generator", "documentation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "llmware",
    "tokenizers",
    "numpy",
    "requests",
    "tqdm",
    "huggingface_hub",
    "hf-xet",
    "PyQt6",
]

[project.optional-dependencies]
npu = [
    "onnxruntime-qnn==1.22.2",
    "onnxruntime-genai==0.9.0",
]
dev = [
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.scripts]
auto-man = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
