[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-man"
version = "0.1.0"
description = "Modernize project setup with uv, comprehensive README, and pre-commit hooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hf-xet>=1.3.2",
    "huggingface-hub>=1.5.0",
    "llmware>=0.4.5",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "onnxruntime-genai==0.9.0",
    "onnxruntime-qnn==1.22.2",
    "orjson>=3.11.7",
    "pyqt6>=6.10.2",
    "requests>=2.32.5",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.3",
]

[project.scripts]
auto-man = "auto_man.main:main"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.uv]
package = true

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,E501"
exclude = [".venv", "__pycache__", "build", "dist"]
