[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-man"
version = "0.1.0"
description = "Simplified NPU-Accelerated Manual Generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llmware>=0.4.5",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "pyqt6>=6.10.2",
    "onnxruntime-genai==0.9.0",
    "onnxruntime-qnn==1.22.2",
]

[project.scripts]
auto-man = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']
